# article-summarizer

./: .editorconfig  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  LICENSE  Makefile  README.md  SETUP.md  mkdocs.yml  pyproject.toml  ruff.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  devin_task.md  feature_request.md  refactor.md  research_spike.md
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/workflows/: docs.yml  issues.yml  tests.yml
docs/knowledge/: KFP003_complex_return_types.md  KFP004_manager_separation_of_concerns.md
docs/knowledge_base/architecture/: 01_project_layout.md  02_extending_the_template.md  03_meta_issue_planning.md
docs/knowledge_base/implementation/: 01_test_first.md  02_test_clie.md
docs/knowledge_base/philosophy/: 01_engineering_principles.md  02_self_review_guidelines.md  03_code_first_ethics.md
docs/knowledge_base/style/: 01_module_layouts.md  02_logging_standard.md  03_file_naming_rules.md
docs/reflections/: KDWP002_refactoring_article_summarizer.md
reference_projects/examples/basic/: lifecycle_example.py
reference_projects/src/agents/: strict_schema.py
reference_projects/tests/: test_agent_runner.py  test_agent_runner_streamed.py  test_cancel_streaming.py  test_config.py  test_openai_chatcompletions.py  test_tool_choice_reset.py  test_tracing_errors.py  test_tracing_errors_streamed.py
reference_projects/tests/model_settings/: test_serialization.py
reference_projects/tests/voice/: test_openai_stt.py
scripts/: dev-setup.bat  dev-setup.ps1  dev-setup.sh  generate_pr_diffs.sh
src/: __init__.py
src/backend/app/: cli.py  main.py
src/backend/app/custom_agents/: __init__.py
src/backend/app/utils/: __init__.py  logger.py
src/backend/tests/: conftest.py
src/backend/tests/Integration/: test_file_pipeline.py
src/backend/tests/cli/: cli_test.py
src/backend/tests/fixtures/: file_helpers.py
src/backend/tests/unit/: test_async.py  test_logger.py  test_sample.py
(+13 files in other folders)
